exports[`Login component snapshot renders required data 1`] = `
<main
  className="page_ftdrhl">
  <section
    className="box_1306j1v">
    <img
      alt="Company Logo"
      className="logo_2al8b9"
      src="ecp_logo.png" />
    <h1
      className="header_ky8f4n">
      Login to your account
    </h1>
    <form
      noValidate={true}
      onSubmit={[Function]}>
      <Field
        component={[Function]}
        id="Login"
        label="Email"
        name="email"
        placeholder="Email"
        type="email"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
        validated={true} />
      <Field
        component={[Function]}
        id="Login"
        label="Password"
        name="password"
        placeholder="Password"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
        validated={true} />
      <Button
        className={
          Object {
            "_definition": Object {
              "width": "39%",
            },
            "_name": "button_ltlwnu",
          }
        }
        disabled={true}>
        Login
      </Button>
    </form>
  </section>
</main>
`;

exports[`Login component snapshot renders required data with error 1`] = `
<main
  className="page_ftdrhl">
  <section
    className="box_1306j1v-o_O-boxErr_wwds3j">
    <img
      alt="Company Logo"
      className="logo_2al8b9"
      src="ecp_logo.png" />
    <h1
      className="header_ky8f4n">
      Login to your account
    </h1>
    <form
      noValidate={true}
      onSubmit={[Function]}>
      <Field
        component={[Function]}
        id="Login"
        label="Email"
        name="email"
        placeholder="Email"
        type="email"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
        validated={true} />
      <Field
        component={[Function]}
        id="Login"
        label="Password"
        name="password"
        placeholder="Password"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
        validated={true} />
      <Button
        className={
          Object {
            "_definition": Object {
              "width": "39%",
            },
            "_name": "button_ltlwnu",
          }
        }
        disabled={false}>
        Login
      </Button>
      <ErrorMsg
        className={
          Object {
            "_definition": Object {
              "margin": "10px 0 0",
            },
            "_name": "error_1f65vod",
          }
        }>
        User not found.
      </ErrorMsg>
    </form>
  </section>
</main>
`;
